cargo-features = ["edition2024"]

[package]
name = "chronos_track"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
	".",
	"scrambler-ebpf",
	"scrambler-user",
	"watchtower-ebpf",
	"watchtower-user",
]
default-members = [
	"scrambler-user",
]

[dependencies]
socket2 = "0.5"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"
ctrlc = "3.4"
ratatui = "0.26"
crossterm = "0.27"

[target.'cfg(target_os = "linux")'.dependencies]
pnet = "0.34"
libc = "0.2"