[package]
name = "watchtower-user"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.37", features = ["full"] }
